--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "laravelcollective/html": "^6.1",
+        "mews/purifier": "^3.2",
         "santigarcor/laratrust": "^5.2",
         "spatie/laravel-searchable": "^1.6"
     },
